Fix sidebox toggle menu is invisible in mobile template

--- a/templates/mobile/app.less
+++ b/templates/mobile/app.less
@@ -19,3 +19,6 @@
 	width: ~"calc(100% - 60px) !important";
 	margin-left: 60px;
 }
+body #egw_fw_basecontainer.sidebar-toggle #egw_fw_top_toolbar div#egw_fw_menu {
+	background-color: #2f343d;
+}
